<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/task_title_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_title_text"
        android:layout_alignParentLeft="true"
        android:id="@+id/task_id_text"
        android:inputType="number"
        android:hint="@string/task_id_input_hint"
        android:maxLength="6"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    <Button
        android:id="@+id/fetch_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_task_btn"
        android:layout_below="@+id/task_id_text"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
